--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram==3.10.0
-groq==0.9.0
-python-dotenv==1.0.0
-aiofiles==23.2.1
+aiogram>=3.10.0
+groq>=0.11.0
+python-dotenv>=1.0.0
+httpx>=0.27.0,<0.28.0
